# distill

./: Cargo.toml  LICENSE
assets/shaders/: common_types.wgsl  distance_fns.wgsl  raymarcher.frag.wgsl  util_fns.wgsl  voxelizer.compute.wgsl
src/: bvh.rs  camera.rs  gpu_types.rs  main.rs  slicer.rs  voxelization.rs  voxelizer.rs  window.rs
src/bvh/: bevy_mesh_integration.rs  bvh_builder.rs
src/camera/: cameras.rs  configuration.rs  marker.rs  plugin.rs
src/camera/cameras/: basic_camera_3d.rs
src/camera/systems/: rotation.rs  translation.rs
src/gpu_types/: box_types.rs  bvh_types.rs  camera.rs  camera_type.rs  polygon_types.rs  vector_types.rs
src/slicer/: slicer_volume.rs  slicing_systems.rs
src/utils/: input_utils.rs
src/voxelization/: raymarch.rs  raymarch_material.rs  raymarch_systems.rs  snapshot.rs  voxelization_systems.rs  voxelization_worker.rs
src/voxelizer/: raymarch.rs  raymarch_systems.rs  signed_distance_field_data.rs  snapshot.rs  voxelizer_systems.rs  voxelizer_worker.rs
