[package]
name = "distill"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", default-features = true, features = [] }
bevy_app_compute = { git = "https://github.com/jwright159/bevy_app_compute/", branch = "bevy-0.17" }
bevy_dev_tools = { version = "0.17.2", optional = true }
bevy_obj = { version = "0.17.1", default-features = false, features = ["mesh"] }
bytemuck = "1.23.2"
image = { version = "0.25.8", default-features = false, features = ["png"] }
strum = { version = "0.27.2", features = ["derive"] }
tracing = "0.1.41"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
distill-dev = ["dep:bevy_dev_tools", "bevy/trace"]
default = ["distill-dev"]
